--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-carousel-minimal": "^1.3.3",
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling-menu": "^2.0.6",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
