--- a/package.json
+++ b/package.json
@@ -3,31 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@brainhubeu/react-carousel": "^2.0.4",
-    "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/brainhubeu__react-carousel": "^2.0.3",
     "axios": "^0.21.1",
-    "carousel": "^0.0.3",
-    "horizontal-scroll": "^1.1.0",
     "nuka-carousel": "^4.7.9",
     "react": "^17.0.2",
-    "react-carousel-minimal": "^1.3.3",
     "react-dom": "^17.0.2",
-    "react-horizontal-scrolling-menu": "^2.0.6",
-    "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
-    "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -54,4 +42,9 @@
       "last 1 safari version"
     ]
   }
+  ,
+    "engines": {
+      "node": ">=0.10.3 <15"
+    }
+  
 }
